# ili9341_dgx

./: .cproject  .gitignore  .project  LICENSE  README-rus.md  README.md  sdkconfig
components/dgx/: CMakeLists.txt  Kconfig  library.json
components/dgx/include/: dgx_bitmap.h  dgx_bw_screen.h  dgx_draw.h  dgx_font.h  dgx_i2c_screen.h  dgx_interscreen.h  dgx_p8_screen.h  dgx_screen.h  dgx_spi_screen.h  dgx_v_screen.h  dgx_vbit_screen.h
components/dgx/include/drivers/: i2c_ssd1306.h  p8_ili9341.h  spi_ili9341.h  spi_ssd1306.h  spi_st7735.h  spi_st7789.h
components/dgx/include/fonts/: IosevkaMedium18.h  TerminusTTFMedium12.h  UbuntuCondensedRegular16.h  UbuntuCondensedRegular20.h  UbuntuCondensedRegular24.h  UbuntuCondensedRegular28.h  UbuntuCondensedRegular32.h  UbuntuCondensedRegular36.h  UbuntuCondensedRegular40.h  UbuntuCondensedRegular44.h  UbuntuCondensedRegular48.h  WeatherIconsRegular24.h  WeatherIconsRegular30.h  WeatherIconsRegular36.h  WeatherIconsRegular40.h  WeatherIconsRegular44.h  WeatherIconsRegular48.h
components/dgx/src/: bitmap.c  bw_screen.c  draw.c  font.c  fontscan.py  i2c_screen.c  interscreen.c  p8_screen.c  screen.c  spi_screen.c  v_screen.c  vbit_screen.c
components/dgx/src/drivers/: i2c_ssd1306.c  p8_ili9341.c  spi_ili9341.c  spi_ssd1306.c  spi_st7735.c  spi_st7789.c
components/dgx/src/fonts/: IosevkaMedium18.c  TerminusTTFMedium12.c  UbuntuCondensedRegular16.c  UbuntuCondensedRegular20.c  UbuntuCondensedRegular24.c  UbuntuCondensedRegular28.c  UbuntuCondensedRegular32.c  UbuntuCondensedRegular36.c  UbuntuCondensedRegular40.c  fonts.txt  (+8 more)
(+13 files in other folders)
